# lazy-string-replace

./: Cargo.toml
src/: lib.rs  pattern.rs
