[package]
name = "lazy-string-replace"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"
description = "A lazy version of `String::replace`, so that it can be formatted or recursively replaced without intermediate allocations"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.2"

[features]
default = []
nightly = []
